Prepare project for Vercel deployment with API configuration

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql+asyncpg://postgres:1234@localhost:5432/hierarchy
+FEEDBACK_BOT_TOKEN=7765219641:AAF5kmDmytG-yMNmn_nDL24gIF7S5jbawLE
+FEEDBACK_CHAT_ID=-1002659337647
